assets/css/JRPL.css
/* Additional padding due to navbar*/
body {
	padding-top: 60px;
}

/*
 * Affix and center
 */

 .container {
	margin-right: auto;
	margin-left: auto;
}

@media (min-width: 768px) {
	.container  {
		width: 700px;
	}
}

/*
 * Log in page
 */

.form-login {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-login .form-login-heading,
.form-login  {
  margin-bottom: 10px;
}
.form-login .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-login .form-control:focus {
  z-index: 2;
}
.form-login input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-login input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

/*
 * Fixtures page
 */
 
 .flag {
	border: 1px solid #c7c6c6;
 }
 
.matchRow a:visited,
.matchRow a:visited * {
  text-decoration: none;
  color: #000;
}

.matchRow  .col-xs-1{
	padding: 0;
}

.matchRow {
	background-color: #f7f7f9;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-bottom: 10px;
}

/*
 * Match page
 */

